--- a/client/client3.html
+++ b/client/client3.html
@@ -20,9 +20,6 @@
     </style>
 </head>
 <body>
-<audio controls autoplay>
-  <source src="/bling.mp3" type="audio/mpeg">
-  Your browser does not support the audio tag.
-</audio>
+    <video src="/bird.mp4" autoplay controls></video>
 </body>
 </html>
